# peekaboo

./: .env.example  .gitignore  FLASH_STATUS.md  README.md  docker-compose.yml  firestore.indexes.json  init-db.sql
.github/: WORKFLOWS.md
.github/workflows/: build-firmware.yml  build-frontend.yml  ci.yml  security-scans.yml  test-backend.yml
.playwright-mcp/: page-2026-06-15T19-43-20-885Z.yml  page-2026-06-15T19-44-11-866Z.yml  page-2026-06-15T19-45-03-799Z.yml  page-2026-06-15T19-55-51-587Z.yml  page-2026-06-15T19-55-56-273Z.yml  page-2026-06-16T21-31-31-805Z.yml  page-2026-06-16T21-31-41-074Z.yml  page-2026-06-17T02-44-02-606Z.yml  page-2026-06-17T02-44-06-390Z.yml  page-2026-06-17T02-44-23-765Z.yml  page-2026-06-18T02-16-51-584Z.yml  page-2026-06-18T02-17-02-464Z.yml  page-2026-06-18T02-17-08-473Z.yml  page-2026-06-21T21-34-31-658Z.yml  page-2026-06-21T21-35-26-590Z.yml
camera/: .env.example  .gitignore  CMakeLists.txt  Dockerfile.esp32  README.md  build-esp32-cam.sh  build-esp32s3.sh  build-esp32s3eye-test.sh  build-esp32s3eye.sh  credentials.h.example  environment.yml  idf_component.yml  jetson_ca_cert.h  monitor-esp32-cam.sh  monitor-esp32s3.sh  monitor-esp32s3eye.py  monitor-esp32s3eye.sh  mqtt_ca_cert.h  partitions_s3eye.csv  platformio.ini  pre_build_espdl.py  pyproject.toml  sdkconfig.esp32cam.defaults  sdkconfig.esp32cam_01  sdkconfig.esp32s3eye  sdkconfig.esp32s3eye_02  sdkconfig.s3eye.defaults  sdkconfig.xiao_peekaboo.defaults  sdkconfig.xiao_s3_01  setup.sh  upload-esp32-cam.sh  upload-esp32s3.sh  upload-esp32s3eye.sh
camera/.github/: copilot_instructions.md
camera/depricated/: build-esp32.sh  main-back.cpp  main.cpp  monitor-esp32.sh  test-camera.cpp  test_usb.cpp  upload-esp32.sh
camera/src/: CMakeLists.txt  board_config.h  idf_component.yml  main.cpp
camera/src/camera_test/: camera_test.cpp
camera/src/data_collect/: collect.cpp
camera/src/s3eye/: camera_task.cpp  camera_task.h  config.h  frame_stats.cpp  frame_stats.h  inference_task.cpp  inference_task.h  main.cpp  mqtt_task.cpp  mqtt_task.h  network_task.cpp  network_task.h  ota_task.cpp  ota_task.h  peekaboo_int8.tflite  shared_types.h
command-module/: Dockerfile  requirements.txt
command-module/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
command-module/src/: audit.py  auth.py  config.py  main.py  migrate_firestore_to_postgres.py  rate_limit.py  validation.py
command-module/tests/: conftest.py
docs/: AUDIT_LOGGING.md  HTTPS_SETUP.md  MQTT_SETUP.md  SETUP.md  UDEV_RULES.md  jetsonModels.md  mqtt-control-channel.md
inference-service/: .env.example  .gitignore  Dockerfile  Dockerfile.jetson  docker-compose.yml  requirements-jetson.txt  requirements.txt
models/: peekaboo.tflite  peekaboo_int8.h  peekaboo_int8_v1.h  peekaboo_int8_v1.tflite  peekaboo_v1.tflite
tools/: gen-jetson-cert.sh  gen-mqtt-certs.sh  gen-mqtt-passwd.sh  gen-self-signed-cert.sh  generate_dataset.py  sort_images.py  test_detection.py  test_recognition.py  train.py
(+61 files in other folders)
